--- a/style.css
+++ b/style.css
@@ -66,3 +66,18 @@ button.add {
 button.add:hover {
   background-color: #218838;
 }
+
+button.search {
+  background-color: #0593a8;
+  color: white;
+  border: none;
+  padding: 8px 16px;
+  font-size: 14px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+button.search:hover {
+  background-color: #046272;
+}
